Add new JavaScript exercises and update HTML script references
- Introduced multiple JavaScript files for exercises on functions, prototypes, and array manipulations.
- Removed unused files and updated the script reference in index.html to point to the new exercise.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <p>Hello World</p>
-   <script src="03-Control-flujo/07-for-in.js"></script>
+   <script src="08-ejercicios/08.js"></script>
    
 
    </script>
