--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <p>Hello World</p>
-   <script src="08-ejercicios/08.js"></script>
+   <script src="11-Prototipos/02-proto.js"></script>
    
 
    </script>
