Add class implementations for User and Restaurants, including methods and inheritance

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <p>Hello World</p>
-   <script src="11-Prototipos/08-mixins.js"></script>
+   <script src="12-clases/07-mixins.js"></script>
    
 
    </script>
