--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>Ultimate JS</title>
 </head>
 <body>
-   <p>Hello World</p>
-   <script src="12-clases/07-mixins.js"></script>
+    <p> Parrafo 1</p>
+    <p class = "red"> Parrafo 2</p>
+    <p class = "red"> Parrafo 3</p>
+    <p class = "blue" name = "chanchito"> Parrafo 4</p>
+   <div id = "cuerpo" name = "body"> Hola mundo</div>
+   <script src="13-dom/05-eventos.js"></script>
    
 
    </script>
