Add asynchronous JavaScript examples including Promises, Fetch API, and error handling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p class = "red"> Parrafo 3</p>
     <p class = "blue" name = "chanchito"> Parrafo 4</p>
    <div id = "cuerpo" name = "body"> Hola mundo</div>
-   <script src="13-dom/05-eventos.js"></script>
+   <script src="14-asincronia/10-cancel.js"></script>
    
 
    </script>
