--- a/index.html
+++ b/index.html
@@ -6,14 +6,6 @@
     <title>Ultimate JS</title>
 </head>
 <body>
-    <p> Parrafo 1</p>
-    <p class = "red"> Parrafo 2</p>
-    <p class = "red"> Parrafo 3</p>
-    <p class = "blue" name = "chanchito"> Parrafo 4</p>
-   <div id = "cuerpo" name = "body"> Hola mundo</div>
-   <script src="14-asincronia/10-cancel.js"></script>
-   
-
-   </script>
+   <script src="15-Proyecto/index.js"></script>
 </body>
 </html>
